--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,7 +21,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Bazen Berhane</h1>
-							<p class="major">I am a full stack web development student. I love learning and growing!</p>
+							<span class="txt-type" data-wait="3000" data-words='["Developer","Designer","Creator"]'></span>
+							<p class="major">I am a full stack web development student. Welcome to my website.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
